--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NotesApp</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="header_title">Заметки</string>
+    <string name="calendar_button">Календарь</string>
 </resources>
