--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="calendar_button">Календарь</string>
     <string name="tvLink">Посмотреть ссылку для перехода на сайт Geekbrains</string>
     <string name="tv_note_child">https://gb.ru/</string>
+    <string name="exit">Выход</string>
+    <string name="calendar">Календарь</string>
 </resources>
