--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,24 @@
     <string name="drawer_header_title">Навигационное меню</string>
     <string name="navigation_drawer_open">Открытие</string>
     <string name="navigation_drawer_close">Закрытие</string>
+    <string name="title1">Заметка #1</string>
+    <string name="title2">Заметка #2</string>
+    <string name="title3">Заметка #3</string>
+    <string name="title4">Заметка #4</string>
+    <string name="title5">Заметка #5</string>
+    <string name="title6">Заметка #6</string>
+    <string name="title7">Заметка #7</string>
+    <string name="title8">Заметка #8</string>
+    <string name="title9">Заметка #9</string>
+    <string name="title10">Заметка #10</string>
+    <string name="description1">Описание заметки #1</string>
+    <string name="description2">Описание заметки #2</string>
+    <string name="description3">Описание заметки #3</string>
+    <string name="description4">Описание заметки #4</string>
+    <string name="description5">Описание заметки #5</string>
+    <string name="description6">Описание заметки #6</string>
+    <string name="description7">Описание заметки #7</string>
+    <string name="description8">Описание заметки #8</string>
+    <string name="description9">Описание заметки #9</string>
+    <string name="description10">Описание заметки #10</string>
 </resources>
